implementacao da conta financeira
